--- a/drupal/sites/all/themes/leidos/css/sass/partials/modules/_static-contact-careers.scss
+++ b/drupal/sites/all/themes/leidos/css/sass/partials/modules/_static-contact-careers.scss
@@ -48,6 +48,8 @@
 
             input {
                 background-color: #fff;
+                height: 51px;
+                margin: 0;
             }
         }
         footer {
